invest/OSGeo4W/apps/grass/grass-6.4.2RC2/include/grass/G3d.h


/*---------------------------------------------------------------------------*/

typedef struct
{

    double north, south;
    double east, west;
    double top, bottom;

    /* dimension of data in "cells"; rows == #x; cols == #y; depths == #z */
    int rows, cols, depths;

    double ns_res, ew_res, tb_res;

    int proj;			/* Projection (see gis.h) */
    int zone;			/* Projection zone (see gis.h) */

} G3D_Region;


/*---------------------------------------------------------------------------*/

struct G3D_Map;


typedef void resample_fn(struct G3D_Map *, int, int, int, void *, int);


/*---------------------------------------------------------------------------*/

typedef struct G3D_Map
{

    char *fileName;
    char *tempName;
    char *mapset;

    /* operation performed on map */
    int operation;		/* G3D_WRITE_DATA or G3D_READ_DATA */

    /* region */
    G3D_Region region;

    /* window for map */
    G3D_Region window;

    /* resmapling function used for map. default is nearest neighbor */
    resample_fn *resampleFun;

    /* units */
    char *unit;

    /* dimension of a single tile in "cells" */
    int tileX, tileY, tileZ;

    /* # of tiles in x, y, and z direction */
    int nx, ny, nz;

    /* data file specific information */

    /* file descriptor */
    int data_fd;		/* file descriptor */

    /* type in which data is stored on file */
    int type;			/* DCELL_TYPE or FCELL_TYPE */

    /* data concering the compression */
    int precision;		/* G3D_MAX_PRECISION or, 0 .. 23 for float, 
				   0 .. 52 for double */
    int compression;		/* G3D_NO_COMPRESSION or G3D_USE_COMPRESSION */
    int useLzw;			/* G3D_USE_LZW or G3D_NO_LZW */
    int useRle;			/* G3D_USE_RLE or G3D_NO_RLE */
    int useXdr;			/* G3D_USE_XDR or G3D_NO_XDR */

    /* pointer to first tile in file */
    int offset;

    /* pointer to the first index entry in file */
    long indexOffset;

    /* sizeof (long) of the system on which the file is/was written */
    int indexLongNbytes;

    /* max # bytes used in the representation of indices; this is equal to */
    /* # bytes used in the representation of "indexOffset" */
    int indexNbytesUsed;

    /* pointer to the last entry in the file */
    int fileEndPtr;

    /* indicates if index is stored in file; used for G3D_READ_DATA only */
    int hasIndex;		/* G3D_HAS_INDEX or G3D_NO_INDEX */

    /* information concerning internal storage of data */

    /* index specific information */
    /* index[i] == the offset of tile "i" in the data file */
    long *index;

    /* tileLength[i] == # bytes used to store tile "i" */
    int *tileLength;

    /* tile specific information */

    /* type in which data is stored in memory */
    int typeIntern;		/* DCELL_TYPE or FCELL_TYPE */

    /* in non-cache mode the "data" array is used to store one tile */
    char *data;

    /* index of tile currently stored in "data"; -1 if none */
    int currentIndex;

    /* cache related variables */

    int useCache;		/* 1 if cache is used */
    void *cache;		/* pointer to cache structure */
    int cacheFD;		/* file discriptor of cache file -- write mode only */
    char *cacheFileName;	/* filename of cache file -- write mode only */
    long cachePosLast;		/* position of last entry in cache file -- write */
    /* mode only */

    /* range info */
    struct FPRange range;

    /* some constants stored for efficiency */

    /* number of bytes required to store a single value of "type" */
    int numLengthExtern;

    /* number of bytes required to store a single value of "typeIntern" */
    int numLengthIntern;

    /* see header.c for details */
    int clipX, clipY, clipZ;
    int tileXY, tileSize;
    int nxy, nTiles;

    /* mask related information */

    int useMask;		/* 1 if mask is used; 0 otherwise */

} G3D_Map;


/*---------------------------------------------------------------------------*/

typedef struct
{

    char *elts;			/* ptr to array of elts */
    int nofElts;		/* size of "elts" */
    int eltSize;		/* size of elt in "elts" */

    int *names;			/* name[i] is the name of elts[i] */

    char *locks;		/* lock[i] == 1 iff elts[i] is locked
				   lock[i] == 0 iff elts[i] is unlocked but active
				   lock[i] == 2 iff elts[i] doesn't contain valid data */
    int autoLock;		/* 1 if auto locking is turned on */
    int nofUnlocked;		/* nof tiles which are unlocked */
    int minUnlocked;		/* min nof elts which have to remain unlocked. min = 1 */

    int *next, *prev;		/* prev/next pointers for fifo */
    int first, last;		/* index (into next) of first and last elt in fifo */
    /* first == -1 iff fifo is empty */

    int (*eltRemoveFun) ();	/* callback activated if the contents of an 
				   elt needs to be removed */
    void *eltRemoveFunData;	/* pointer to user data passed along with 
				   eltRemoveFun */
    int (*eltLoadFun) ();	/* callback activated to load contents of an elt */
    void *eltLoadFunData;	/* pointer to user data passed along with 
				   eltLoadFun */

    void *hash;			/* ptr to hashTable used to relate external names to
				   internal indices (elts) */

} G3D_cache;


/*---------------------------------------------------------------------------*/

typedef struct
{

    int nofNames;
    int *index;
    char *active;
    int lastName;
    int lastIndex;
    int lastIndexActive;

} G3d_cache_hash;

int G3d_cache_put_elt(G3D_cache *, int, const void *);


/* grass/src/libes/g3d/cachehash.c */
void G3d_cache_hash_reset(G3d_cache_hash *);

void G3d_cache_hash_dispose(G3d_cache_hash *);

void *G3d_cache_hash_new(int);

void G3d_cache_hash_remove_name(G3d_cache_hash *, int);

void G3d_cache_hash_load_name(G3d_cache_hash *, int, int);

int G3d_cache_hash_name2index(G3d_cache_hash *, int);


/* grass/src/libes/g3d/changeprecision.c */
void G3d_changePrecision(void *, int, const char *);


/* grass/src/libes/g3d/changetype.c */
void G3d_changeType(void *, const char *);


/* grass/src/libes/g3d/filecompare.c */
void G3d_compareFiles(const char *, const char *, const char *, const char *);


/* grass/src/libes/g3d/filename.c */
void G3d_filename(char *, const char *, const char *, const char *);


/* grass/src/libes/g3d/find_grid3.c */
char *G_find_grid3(const char *, const char *);


/* grass/src/libes/g3d/fpcompress.c */
void G_fpcompress_printBinary(char *, int);

void G_fpcompress_dissectXdrDouble(unsigned char *);

int G_fpcompress_writeXdrNums(int, char *, int, int, char *, int, int, int);

int G_fpcompress_writeXdrFloats(int, char *, int, int, char *, int, int);

int G_fpcompress_writeXdrDouble(int, char *, int, int, char *, int, int);

int G_fpcompress_readXdrNums(int, char *, int, int, int, char *, int);

int G_fpcompress_readXdrFloats(int, char *, int, int, int, char *);

int G_fpcompress_readXdrDoubles(int, char *, int, int, int, char *);


/* grass/src/libes/g3d/g3dalloc.c */
void *G3d_malloc(int);

void *G3d_realloc(void *, int);

void G3d_free(void *);


/* grass/src/libes/g3d/g3dcache.c */
int G3d_initCache(G3D_Map *, int);

int G3d_disposeCache(G3D_Map *);

int G3d_flushAllTiles(G3D_Map *);


/* grass/src/libes/g3d/g3dcats.c */
int G3d_writeCats(const char *, struct Categories *);

int G3d_readCats(const char *, const char *, struct Categories *);


/* grass/src/libes/g3d/g3dclose.c */
int G3d_closeCell(G3D_Map *);


/* grass/src/libes/g3d/g3dcolor.c */
int G3d_removeColor(const char *);

int G3d_readColors(const char *, const char *, struct Colors *);

int G3d_writeColors(const char *, const char *, struct Colors *);


/* grass/src/libes/g3d/g3ddefaults.c */
void G3d_setCompressionMode(int, int, int, int);

void G3d_getCompressionMode(int *, int *, int *, int *);