OSGeo4W/apps/grass/grass-6.4.2RC2/etc/python/grass/lib/g3d.py


# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 264
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_cache_put_elt'):
    G3d_cache_put_elt = _libs['grass_g3d.6.4.2RC2'].G3d_cache_put_elt
    G3d_cache_put_elt.restype = c_int
    G3d_cache_put_elt.argtypes = [POINTER(G3D_cache), c_int, POINTER(None)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 267
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_cache_hash_reset'):
    G3d_cache_hash_reset = _libs['grass_g3d.6.4.2RC2'].G3d_cache_hash_reset
    G3d_cache_hash_reset.restype = None
    G3d_cache_hash_reset.argtypes = [POINTER(G3d_cache_hash)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 268
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_cache_hash_dispose'):
    G3d_cache_hash_dispose = _libs['grass_g3d.6.4.2RC2'].G3d_cache_hash_dispose
    G3d_cache_hash_dispose.restype = None
    G3d_cache_hash_dispose.argtypes = [POINTER(G3d_cache_hash)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 269
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_cache_hash_new'):
    G3d_cache_hash_new = _libs['grass_g3d.6.4.2RC2'].G3d_cache_hash_new
    G3d_cache_hash_new.restype = POINTER(None)
    G3d_cache_hash_new.argtypes = [c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 270
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_cache_hash_remove_name'):
    G3d_cache_hash_remove_name = _libs['grass_g3d.6.4.2RC2'].G3d_cache_hash_remove_name
    G3d_cache_hash_remove_name.restype = None
    G3d_cache_hash_remove_name.argtypes = [POINTER(G3d_cache_hash), c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 271
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_cache_hash_load_name'):
    G3d_cache_hash_load_name = _libs['grass_g3d.6.4.2RC2'].G3d_cache_hash_load_name
    G3d_cache_hash_load_name.restype = None
    G3d_cache_hash_load_name.argtypes = [POINTER(G3d_cache_hash), c_int, c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 272
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_cache_hash_name2index'):
    G3d_cache_hash_name2index = _libs['grass_g3d.6.4.2RC2'].G3d_cache_hash_name2index
    G3d_cache_hash_name2index.restype = c_int
    G3d_cache_hash_name2index.argtypes = [POINTER(G3d_cache_hash), c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 275
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_changePrecision'):
    G3d_changePrecision = _libs['grass_g3d.6.4.2RC2'].G3d_changePrecision
    G3d_changePrecision.restype = None
    G3d_changePrecision.argtypes = [POINTER(None), c_int, String]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 278
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_changeType'):
    G3d_changeType = _libs['grass_g3d.6.4.2RC2'].G3d_changeType
    G3d_changeType.restype = None
    G3d_changeType.argtypes = [POINTER(None), String]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 281
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_compareFiles'):
    G3d_compareFiles = _libs['grass_g3d.6.4.2RC2'].G3d_compareFiles
    G3d_compareFiles.restype = None
    G3d_compareFiles.argtypes = [String, String, String, String]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 284
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_filename'):
    G3d_filename = _libs['grass_g3d.6.4.2RC2'].G3d_filename
    G3d_filename.restype = None
    G3d_filename.argtypes = [String, String, String, String]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 287
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G_find_grid3'):
    G_find_grid3 = _libs['grass_g3d.6.4.2RC2'].G_find_grid3
    G_find_grid3.restype = ReturnString
    G_find_grid3.argtypes = [String, String]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 290
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G_fpcompress_printBinary'):
    G_fpcompress_printBinary = _libs['grass_g3d.6.4.2RC2'].G_fpcompress_printBinary
    G_fpcompress_printBinary.restype = None
    G_fpcompress_printBinary.argtypes = [String, c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 291
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G_fpcompress_dissectXdrDouble'):
    G_fpcompress_dissectXdrDouble = _libs['grass_g3d.6.4.2RC2'].G_fpcompress_dissectXdrDouble
    G_fpcompress_dissectXdrDouble.restype = None
    G_fpcompress_dissectXdrDouble.argtypes = [POINTER(c_ubyte)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 292
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G_fpcompress_writeXdrNums'):
    G_fpcompress_writeXdrNums = _libs['grass_g3d.6.4.2RC2'].G_fpcompress_writeXdrNums
    G_fpcompress_writeXdrNums.restype = c_int
    G_fpcompress_writeXdrNums.argtypes = [c_int, String, c_int, c_int, String, c_int, c_int, c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 293
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G_fpcompress_writeXdrFloats'):
    G_fpcompress_writeXdrFloats = _libs['grass_g3d.6.4.2RC2'].G_fpcompress_writeXdrFloats
    G_fpcompress_writeXdrFloats.restype = c_int
    G_fpcompress_writeXdrFloats.argtypes = [c_int, String, c_int, c_int, String, c_int, c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 294
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G_fpcompress_writeXdrDouble'):
    G_fpcompress_writeXdrDouble = _libs['grass_g3d.6.4.2RC2'].G_fpcompress_writeXdrDouble
    G_fpcompress_writeXdrDouble.restype = c_int
    G_fpcompress_writeXdrDouble.argtypes = [c_int, String, c_int, c_int, String, c_int, c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 295
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G_fpcompress_readXdrNums'):
    G_fpcompress_readXdrNums = _libs['grass_g3d.6.4.2RC2'].G_fpcompress_readXdrNums
    G_fpcompress_readXdrNums.restype = c_int
    G_fpcompress_readXdrNums.argtypes = [c_int, String, c_int, c_int, c_int, String, c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 296
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G_fpcompress_readXdrFloats'):
    G_fpcompress_readXdrFloats = _libs['grass_g3d.6.4.2RC2'].G_fpcompress_readXdrFloats
    G_fpcompress_readXdrFloats.restype = c_int
    G_fpcompress_readXdrFloats.argtypes = [c_int, String, c_int, c_int, c_int, String]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 297
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G_fpcompress_readXdrDoubles'):
    G_fpcompress_readXdrDoubles = _libs['grass_g3d.6.4.2RC2'].G_fpcompress_readXdrDoubles
    G_fpcompress_readXdrDoubles.restype = c_int
    G_fpcompress_readXdrDoubles.argtypes = [c_int, String, c_int, c_int, c_int, String]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 300
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_malloc'):
    G3d_malloc = _libs['grass_g3d.6.4.2RC2'].G3d_malloc
    G3d_malloc.restype = POINTER(None)
    G3d_malloc.argtypes = [c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 301
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_realloc'):
    G3d_realloc = _libs['grass_g3d.6.4.2RC2'].G3d_realloc
    G3d_realloc.restype = POINTER(None)
    G3d_realloc.argtypes = [POINTER(None), c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 302
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_free'):
    G3d_free = _libs['grass_g3d.6.4.2RC2'].G3d_free
    G3d_free.restype = None
    G3d_free.argtypes = [POINTER(None)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 305
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_initCache'):
    G3d_initCache = _libs['grass_g3d.6.4.2RC2'].G3d_initCache
    G3d_initCache.restype = c_int
    G3d_initCache.argtypes = [POINTER(G3D_Map), c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 306
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_disposeCache'):
    G3d_disposeCache = _libs['grass_g3d.6.4.2RC2'].G3d_disposeCache
    G3d_disposeCache.restype = c_int
    G3d_disposeCache.argtypes = [POINTER(G3D_Map)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 307
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_flushAllTiles'):
    G3d_flushAllTiles = _libs['grass_g3d.6.4.2RC2'].G3d_flushAllTiles
    G3d_flushAllTiles.restype = c_int
    G3d_flushAllTiles.argtypes = [POINTER(G3D_Map)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 310
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_writeCats'):
    G3d_writeCats = _libs['grass_g3d.6.4.2RC2'].G3d_writeCats
    G3d_writeCats.restype = c_int
    G3d_writeCats.argtypes = [String, POINTER(struct_Categories)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 311
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_readCats'):
    G3d_readCats = _libs['grass_g3d.6.4.2RC2'].G3d_readCats
    G3d_readCats.restype = c_int
    G3d_readCats.argtypes = [String, String, POINTER(struct_Categories)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 314
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_closeCell'):
    G3d_closeCell = _libs['grass_g3d.6.4.2RC2'].G3d_closeCell
    G3d_closeCell.restype = c_int
    G3d_closeCell.argtypes = [POINTER(G3D_Map)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 317
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_removeColor'):
    G3d_removeColor = _libs['grass_g3d.6.4.2RC2'].G3d_removeColor
    G3d_removeColor.restype = c_int
    G3d_removeColor.argtypes = [String]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 318
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_readColors'):
    G3d_readColors = _libs['grass_g3d.6.4.2RC2'].G3d_readColors
    G3d_readColors.restype = c_int
    G3d_readColors.argtypes = [String, String, POINTER(struct_Colors)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 319
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_writeColors'):
    G3d_writeColors = _libs['grass_g3d.6.4.2RC2'].G3d_writeColors
    G3d_writeColors.restype = c_int
    G3d_writeColors.argtypes = [String, String, POINTER(struct_Colors)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 322
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_setCompressionMode'):
    G3d_setCompressionMode = _libs['grass_g3d.6.4.2RC2'].G3d_setCompressionMode
    G3d_setCompressionMode.restype = None
    G3d_setCompressionMode.argtypes = [c_int, c_int, c_int, c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 323
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_getCompressionMode'):
    G3d_getCompressionMode = _libs['grass_g3d.6.4.2RC2'].G3d_getCompressionMode
    G3d_getCompressionMode.restype = None
    G3d_getCompressionMode.argtypes = [POINTER(c_int), POINTER(c_int), POINTER(c_int), POINTER(c_int)]
